Fixed dark mode image issue

--- a/src/components/Home/SpendMoney/SpendMoney.scss
+++ b/src/components/Home/SpendMoney/SpendMoney.scss
@@ -1,5 +1,5 @@
 .SpendMoneyContainer {
-	background: url('../../../images/spendMoneyBg.jpg');
+	background: url('../../../images/spendMoneyBg1.png');
 
 	background-position: center;
 	background-repeat: no-repeat;
